# HackerOS-Store

./: README.md  build.hacker  build.hl
source-code/: Cargo.toml  hackeros.gresource.xml.in  index.html  main.vala  meson.build  package.json
source-code/src/: App.css  App.tsx  i18n.ts  iconMap.tsx  main.rs
source-code/src-tauri/: Cargo.toml  tauri.conf.json
source-code/src-tauri/capabilities/: default.json
source-code/src-tauri/src/: lib.rs  main.rs
source-code/src/data/: packages.ts
