[package]
name = "HackerOS-App"
version = "0.4.0"
edition = "2021"
description = "GUI wrapper for HackerOS CLI tools (hacker, hli, hackerc) using Iced"
authors = ["HackerOS Team"]

[dependencies]
iced = { version = "0.12.1", features = ["image", "svg", "tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"

[[bin]]
name = "HackerOS-App"
path = "src/main.rs"
